--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: beige;
+    background-color: #8cccf2;
 }
 
 #pageContent ul {
@@ -40,17 +40,17 @@ body {
     font-family: Verdana, Arial, Helvetica, sans-serif;
     height: 3000px;
     background-color: white;
-    color:
+    color: #6b89bf
 }
 
 #header {
-    width: 99.8%;
+    width: 100%;
     height: 50px;
-    background: #FF8080;
+    background: #f2b28c   ;
     border: solid #CCCCCC thin;
-    border-bottom: solid #f9e9a1 10px;
-    border-top: solid #2297a6 10px;
+    border-bottom: solid #BDBDBD  10px;
     padding-top: 20px;
+    padding-bottom: 20px;
     align-content: center;
     text-align: center;
     
@@ -106,7 +106,7 @@ content {
 #leftEdge {
     float: left;
     border-left: solid #CCCCCC thin;
-    background: #2297a6;
+    background: #BDBDBD ;
     width: 1%;
     height: 2900px;
 }
@@ -114,19 +114,20 @@ content {
 #rightEdge {
     float: right;
     border-left: solid #CCCCCC thin;
-    background: #2297a6;
+    background: #BDBDBD ;
     width: 1%;
     height: 2900px;
 }
 
 #footer {
-    width: 99.8%;
+    width: 100%;
     text-align: center;
+    color: black;
     float: left;
     font-size: 12px;
     font-style: italic;
-    background: #f9e9a1;
-    border: solid #CCCCCC thin;
+    background: #BDBDBD ;
+    border: solid #BDBDBD thin;
     border-top: none
 }
 
